fix: fixing horizontal scrolling on mobile

--- a/frontend-store/src/styles/globals.css
+++ b/frontend-store/src/styles/globals.css
@@ -14,7 +14,7 @@
 }
 
 *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
-html { scroll-behavior: smooth; height: 100%; }
+html { scroll-behavior: smooth; height: 100%; overflow-x: hidden; }
 
 body {
   background: var(--dark);
